# xic

./: .gitignore  Makefile  README.md  build.gradle  gradle_exec.sh  make_jar_executable.sh  settings.gradle  xic-build
QtXi/: Makefile  linkqt.sh  update
QtXi/examples/: animate-fancy.s  animate.s  layouts.s  mandelbrot.s  mandelbrot.xi  onewidget.s  widgetevents.s
QtXi/libQtXi/: CMakeCache.txt  CMakeLists.txt  bindqt.cpp  bindqt.h  makebindings  qt.idl  qt.ixi  xiobj.h
QtXi/libQtXi/generator/: bindgen.cpp  bindgen.h  driver.cpp  parser.cpp  parser.h  types.cpp
QtXi/tests/: animate-fancy.cpp  animate.cpp  layouts.cpp  onewidget.cpp  widgetevents.cpp
examples/: xi.cup  xiparser.cup
gradle/wrapper/: gradle-wrapper.properties
lib/: cup
runtime/examples/: arr.s  fact.s
runtime/libxi/: libxi.c
src/: README.txt  test.flex  xilexer.flex
tests/: generate_staff_tests_from_submission.py  pa1-submission-results.md  pa1fix_test.xi  pa2-submission-results.md  pa3-submission-results.md  pa4-submission-results.md  test0.xi  test1.xi  test2.xi  xthScriptBuild
tests/examples/: exp.xi
tests/pa1-fix-tests/: catch_long_int_error_largeintliteral.lexedsol  catch_long_int_error_largeintliteral.xi  consecutive_double_quotes_string07.lexedsol  consecutive_double_quotes_string07.xi  dangling_backslash_space_string06.xi  dangling_backslash_string05.xi  escape_char01.lexedsol  escape_char01.xi  escape_char03.xi  escape_string08.lexedsol  escape_string08.xi  ill_char_char02.xi  illegal_escape_string03.lexedsol  illegal_escape_string03.xi  illegal_hex_string04.xi  incorrect_lexing_string05.lexedsol  incorrect_lexing_string05.xi  min_int_int06.lexedsol  min_int_int06.xi  split_string_string01.xi  split_string_string02.xi  string_in_char_char04.xi  true_false_keyword09_others.lexedsol  true_false_keyword09_others.xi  unclosed_double_quotes_string02.xi  unclosed_double_quotes_string_string02.lexedsol  unclosed_double_quotes_string_string02.xi  unclosed_sing_quotes_char03.xi  unclosed_sing_quotes_char06.lexedsol  unclosed_sing_quotes_char06.xi  unclosed_sing_quotes_sing_letter_char06.xi  unescaped_backslash_string01.xi  xthScript
tests/pa2-fix-tests/: full_prog_anon08_03.parsedsol  full_prog_wo_sing_quote_escape_in_string_anon08_03.parsedsol  full_prog_wo_sing_quote_escape_in_string_anon08_03.xi  func_def_return_invalid_type_anon01_17.parsedsol  func_def_return_invalid_type_anon01_17.xi  func_in_ixi_x05.ixi  func_in_ixi_x05.parsedsol  func_without_braces_body_codedecl01.parsedsol  func_without_braces_body_codedecl02.parsedsol  func_without_braces_body_codedecl02.xi  func_without_braces_body_codedecl03.parsedsol  func_without_braces_body_codedecl03.xi  if_else_return_anon06_02.parsedsol  if_else_return_anon06_02.xi  if_return_if02.parsedsol  if_return_if02.xi  min_int_multi_parse_anon07_01.parsedsol  min_int_multi_parse_anon07_01.xi  min_int_parse_expr06.parsedsol  min_int_parse_expr06.xi  multi_dim_arrays_anon04_01.parsedsol  multiple_underscore_assign_vardecl03.parsedsol  multiple_underscore_assign_vardecl03.xi  return_as_funcs_anon01_03.parsedsol  return_as_funcs_anon01_03.xi  return_multiple_blocks_anon01_02.parsedsol  return_multiple_blocks_anon01_02.xi  (+9 more)
vm/: INSTALL  README  Vagrantfile  Vagrantfile.local
xth/: update  xth
(+853 files in other folders)
